--- a/momsite/app.css
+++ b/momsite/app.css
@@ -1,4 +1,99 @@
-﻿img {
+﻿/* header navigation menu */
+ul.navigationmenu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+    ul.navigationmenu li {
+        float: left;
+    }
+
+        ul.navigationmenu li a {
+            display: inline-block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            transition: 0.3s;
+            font-size: 17px;
+        }
+
+            ul.navigationmenu li a:hover {
+                background-color: #111;
+            }
+
+        ul.navigationmenu li.icon {
+            display: none;
+        }
+
+@media screen and (max-width:680px) {
+    ul.navigationmenu li:not(:first-child) {
+        display: none;
+    }
+
+    ul.navigationmenu li.icon {
+        float: right;
+        display: inline-block;
+    }
+}
+
+@media screen and (max-width:680px) {
+    ul.navigationmenu.responsive {
+        position: relative;
+    }
+
+        ul.navigationmenu.responsive li.icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+
+        ul.navigationmenu.responsive li {
+            float: none;
+            display: inline;
+        }
+
+            ul.navigationmenu.responsive li a {
+                display: block;
+                text-align: left;
+            }
+}
+
+/* product gallery page */
+#leftnav {
+    width: 24%;
+    float: left;
+}
+
+    #leftnav img {
+        max-width: 100px;
+    }
+
+        #leftnav img.selected {
+            opacity: .5;
+        }
+
+#rightnav {
+    width: 24%;
+    float: right;
+}
+
+    #rightnav img {
+        max-width: 100px;
+    }
+
+        #rightnav img.selected {
+            opacity: .5;
+        }
+
+#centerimage {
+    width: 49%;
+}
+
+img {
     border: 5px solid black;
     max-width: 500px;
     /*margin: auto;*/
@@ -17,140 +112,163 @@ span {
 }
 
 h1 {
-  text-align: center;
-  font-family: Montserrat, sans-serif;
-  color: #333;
-  margin-top:150px;
+    text-align: center;
+    font-family: Montserrat, sans-serif;
+    color: #333;
+    margin-top: 150px;
 }
 
 .accordion {
-  width: 100%;
-  max-width: 1580px;
-  height: 550px;
-  overflow: hidden;
-  margin: 50px auto;
+    width: 100%;
+    max-width: 1580px;
+    height: 550px;
+    overflow: hidden;
+    margin: 50px auto;
 }
 
-.accordion ul {
-  width: 100%;
-  display: table;
-  table-layout: fixed;
-  margin: 0;
-  padding: 0;
-}
+    .accordion ul {
+        width: 100%;
+        display: table;
+        table-layout: fixed;
+        margin: 0;
+        padding: 0;
+    }
 
-.accordion ul li {
-  display: table-cell;
-  vertical-align: bottom;
-  position: relative;
-  width: 16.666%;
-  height: 550px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  transition: all 500ms ease;
-  border: 5px solid black;
-}
+        .accordion ul li {
+            display: table-cell;
+            vertical-align: bottom;
+            position: relative;
+            width: 16.666%;
+            height: 550px;
+            background-repeat: no-repeat;
+            background-position: center center;
+            transition: all 500ms ease;
+            border: 5px solid black;
+        }
 
-.accordion ul li div {
-  display: block;
-  overflow: hidden;
-  width: 100%;
-}
+            .accordion ul li div {
+                display: block;
+                overflow: hidden;
+                width: 100%;
+            }
 
-.accordion ul li div a {
-  display: block;
-  height: 550px;
-  width: 100%;
-  position: relative;
-  z-index: 3;
-  vertical-align: bottom;
-  padding: 15px 20px;
-  box-sizing: border-box;
-  color: #fff;
-  text-decoration: none;
-  font-family: Open Sans, sans-serif;
-  transition: all 200ms ease;
-}
+                .accordion ul li div a {
+                    display: block;
+                    height: 550px;
+                    width: 100%;
+                    position: relative;
+                    z-index: 3;
+                    vertical-align: bottom;
+                    padding: 15px 20px;
+                    box-sizing: border-box;
+                    color: #fff;
+                    text-decoration: none;
+                    font-family: Open Sans, sans-serif;
+                    transition: all 200ms ease;
+                }
 
-.accordion ul li div a * {
-  opacity: 0;
-  margin: 0;
-  width: 100%;
-  text-overflow: ellipsis;
-  position: relative;
-  z-index: 5;
-  white-space: nowrap;
-  overflow: hidden;
-  -webkit-transform: translateX(-20px);
-  transform: translateX(-20px);
-  -webkit-transition: all 400ms ease;
-  transition: all 400ms ease;
-}
+                    .accordion ul li div a * {
+                        opacity: 0;
+                        margin: 0;
+                        width: 100%;
+                        text-overflow: ellipsis;
+                        position: relative;
+                        z-index: 5;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        -webkit-transform: translateX(-20px);
+                        transform: translateX(-20px);
+                        -webkit-transition: all 400ms ease;
+                        transition: all 400ms ease;
+                    }
 
-.accordion ul li div a h2 {
-  font-family: Montserrat, sans-serif;
-  text-overflow: clip;
-  font-size: 24px;
-  text-transform: uppercase;
-  margin-bottom: 2px;
-  top: 160px;
-}
+                    .accordion ul li div a h2 {
+                        font-family: Montserrat, sans-serif;
+                        text-overflow: clip;
+                        font-size: 24px;
+                        text-transform: uppercase;
+                        margin-bottom: 2px;
+                        top: 160px;
+                    }
 
-.accordion ul li div a p {
-  top: 160px;
-  font-size: 13.5px;
-}
+                    .accordion ul li div a p {
+                        top: 160px;
+                        font-size: 13.5px;
+                    }
 
-.accordion ul li:nth-child(1) { background-image: url("image1.jpg"); }
+            .accordion ul li:nth-child(1) {
+                background-image: url("image1.jpg");
+            }
 
-.accordion ul li:nth-child(2) { background-image: url("image2.jpg"); }
+            .accordion ul li:nth-child(2) {
+                background-image: url("image2.jpg");
+            }
 
-.accordion ul li:nth-child(3) { background-image: url("image3.jpg"); }
+            .accordion ul li:nth-child(3) {
+                background-image: url("image3.jpg");
+            }
 
-.accordion ul li:nth-child(4) { background-image: url("image4.jpg"); }
+            .accordion ul li:nth-child(4) {
+                background-image: url("image4.jpg");
+            }
 
-.accordion ul li:nth-child(5) { background-image: url("image5.jpg"); }
+            .accordion ul li:nth-child(5) {
+                background-image: url("image5.jpg");
+            }
 
-.accordion ul:hover li { width: 8%; }
+        .accordion ul:hover li {
+            width: 8%;
+        }
 
-.accordion ul:hover li:hover { width: 60%; }
+            .accordion ul:hover li:hover {
+                width: 60%;
+            }
 
-.accordion ul:hover li:hover a { background: rgba(0, 0, 0, 0.4); }
+                .accordion ul:hover li:hover a {
+                    background: rgba(0, 0, 0, 0.4);
+                }
 
-.accordion ul:hover li:hover a * {
-  opacity: 1;
-  -webkit-transform: translateX(0);
-  transform: translateX(0);
-}
- @media screen and (max-width: 600px) {
+                    .accordion ul:hover li:hover a * {
+                        opacity: 1;
+                        -webkit-transform: translateX(0);
+                        transform: translateX(0);
+                    }
 
-body { margin: 0; }
+@media screen and (max-width: 600px) {
 
-.accordion { height: auto; }
+    body {
+        margin: 0;
+    }
 
-.accordion ul li,
-.accordion ul li:hover,
-.accordion ul:hover li,
-.accordion ul:hover li:hover {
-  position: relative;
-  display: table;
-  table-layout: fixed;
-  width: 100%;
-  -webkit-transition: none;
-  transition: none;
-}
+    .accordion {
+        height: auto;
+    }
+
+        .accordion ul li,
+        .accordion ul li:hover,
+        .accordion ul:hover li,
+        .accordion ul:hover li:hover {
+            position: relative;
+            display: table;
+            table-layout: fixed;
+            width: 100%;
+            -webkit-transition: none;
+            transition: none;
+        }
 }
 
 .about {
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 12px;
-  color: #666;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 12px;
+    color: #666;
 }
 
-.about a {
-  color: blue;
-  text-decoration: none;
-}
+    .about a {
+        color: blue;
+        text-decoration: none;
+    }
 
-.about a:hover { text-decoration: underline; }
+        .about a:hover {
+            text-decoration: underline;
+        }
