--- a/momsite/app.css
+++ b/momsite/app.css
@@ -1,4 +1,5 @@
 ﻿/*Copyright © Sam Savage 2016*/
+
 /* header navigation menu */
 ul.navigationmenu {
     list-style-type: none;
@@ -106,6 +107,10 @@ img {
 
 body {
     font-family: 'Segoe UI', sans-serif;
+    background: black;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*span {
@@ -115,7 +120,7 @@ body {
 h1 {
     text-align: center;
     font-family: Montserrat, sans-serif;
-    color: #333;
+    /*color: #333;*/
     /*margin-top: 150px;*/
 }
 
@@ -372,4 +377,20 @@ h1 {
     .modal-content {
         width: 100%;
     }
+}
+
+.itemRow {
+    padding: 5px;
+}
+
+.itemRow td {
+    padding: 10px;
+}
+
+.itemRow td a {
+    color:white;
+}
+
+.itemRow td input {
+    max-width: 30px;
 }
