--- a/momsite/app.css
+++ b/momsite/app.css
@@ -95,6 +95,10 @@ ul.navigationmenu {
     width: 40%;
 }
 
+    #centerimage img {
+        width: 99%;
+    }
+
 img {
     border: 5px solid black;
     max-width: 500px;
